# n91

./: README.md  bgp_template.j2  gql_bgp_config_gen.py  gql_config_gen.py  gql_model.py  gql_test_aiohttp.py  hash_solution.py  pyproject.toml  scenario-04.yml  template_model.py  test_gql.py
files/: init_s1.sh  init_s2.sh  leaf1.conf  leaf2.conf  spine1.conf  spine2.conf
templates/: leaf1.yaml  leaf2.yaml  leaf_template.j2  spine1.yaml  spine2.yaml  spine_template.j2
