[tool.poetry]
name = "n91"
version = "0.1.0"
description = "N91 Hackathon Templating Scenario"
authors = ["Chris Woodfield <chris@semihuman.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
gql = {version = "^3.5.0", extras = ["aiohttp"]}
asyncio = "^3.4.3"
requests = "^2.31.0"
httpx = "^0.27.0"
pydantic = "^2.7.1"
aiohttp = "^3.9.5"
jinja2 = "^3.1.4"
netaddr = "^1.2.1"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
